# Quake

./: .gitignore  CMakeLists.txt
WinQuake/: CMakeLists.txt  gl_vidnt.c  net_wins.c  net_wipx.c  pr_exec.c  snd_mem.c  snd_mix.c  sys_win.c
progs/: readme.txt
utils/: CMakeLists.txt
utils/bspinfo/: CMakeLists.txt
utils/common/: CMakeLists.txt  lbmlib.c  polylib.c  threads.c
utils/light/: CMakeLists.txt
utils/modelgen/: CMakeLists.txt
utils/qbsp/: CMakeLists.txt
utils/qcc/: CMakeLists.txt
utils/qfiles/: CMakeLists.txt
utils/qlumpy/: CMakeLists.txt
utils/sprgen/: CMakeLists.txt
utils/texmake/: CMakeLists.txt
utils/vis/: CMakeLists.txt
